--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "type": "library",
   "require": {
     "php": "^7.1",
-    "illuminate/database": "^5.5",
+    "illuminate/database": "^5.6",
+    "illuminate/events": "^5.6",
     "symfony/var-dumper": "~4.0"
   },
   "require-dev": {
