--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "php": "^7.1",
     "illuminate/database": "^5.6",
     "illuminate/events": "^5.6",
-    "symfony/var-dumper": "~4.0"
+    "symfony/var-dumper": "~4.0",
+    "ext-json": "^1.6"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.6",
