--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .idea
 .DS_Store
 
-.php_cs.cache
-cs_fixer_tmp_*
-
-composer.lock
 composer.phar
 vendor
+
+.phpunit.result.cache
+.php_cs.cache
+cs_fixer_tmp_*
