--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
     "illuminate/database": "^5.6",
     "illuminate/events": "^5.6",
     "symfony/var-dumper": "~4.0",
-    "ext-json": "^1.6"
+    "ext-json": "^1.6",
+    "ext-mbstring": "^7.2"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "2.15.*",
-    "phpunit/phpunit": "8.1.*"
+    "phpunit/phpunit": "8.1.*",
+    "fusionspim/php-cs-fixer-config": "^1.1"
   },
   "autoload": {
     "psr-4": {
