--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "8.1.*",
-    "fusionspim/php-cs-fixer-config": "^1.1"
+    "fusionspim/php-cs-fixer-config": "^1.1",
+    "ext-sqlite3": "^7.3"
   },
   "autoload": {
     "psr-4": {
