--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "require": {
     "php": "^7.2",
-    "illuminate/database": "^6.5",
-    "illuminate/events": "^6.5",
-    "symfony/var-dumper": "~4.0",
+    "illuminate/database": "^5.8 || ^6.5",
+    "illuminate/events": "^5.8 || ^6.5",
+    "symfony/var-dumper": "~4.0 || ~5.0",
     "ext-json": "^1.6",
     "ext-mbstring": "^7.2"
   },
