--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "8.4.*",
-    "fusionspim/php-cs-fixer-config": "^3.0",
-    "ext-sqlite3": "^7.2"
+    "ext-sqlite3": "^7.2",
+    "fusionspim/php-cs-fixer-config": "^4.0.0"
   },
   "autoload": {
     "psr-4": {
