--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     "ext-mbstring": "^7.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "8.4.*",
     "ext-sqlite3": "^7.2",
-    "fusionspim/php-cs-fixer-config": "^4.0.0"
+    "fusionspim/php-cs-fixer-config": "^4.0.0",
+    "phpunit/phpunit": "^9.0.0"
   },
   "autoload": {
     "psr-4": {
