--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": ["capsule", "debug", "eloquent", "laravel", "orm"],
   "license": "MIT",
   "require": {
-    "php": "^7.2",
+    "php": "^7.3",
     "illuminate/database": "^5.8 || ^6.5",
     "illuminate/events": "^5.8 || ^6.5",
     "symfony/var-dumper": "~4.0 || ~5.0",
@@ -12,9 +12,9 @@
     "ext-mbstring": "^7.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "8.4.*",
-    "fusionspim/php-cs-fixer-config": "^3.0",
-    "ext-sqlite3": "^7.2"
+    "ext-sqlite3": "^7.2",
+    "fusionspim/php-cs-fixer-config": "^4.0.0",
+    "phpunit/phpunit": "^9.0.0"
   },
   "autoload": {
     "psr-4": {
