--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "require": {
     "php": "^7.3",
-    "illuminate/database": "^5.8 || ^6.5",
-    "illuminate/events": "^5.8 || ^6.5",
+    "illuminate/database": "^5.8 || ^6.0 || ^7.0",
+    "illuminate/events": "^5.8 || ^6.0 || ^7.0",
     "symfony/var-dumper": "~4.0 || ~5.0",
     "ext-json": "^1.6",
     "ext-mbstring": "^7.2"
