--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "illuminate/database": "^5.8 || ^6.0 || ^7.0",
     "illuminate/events": "^5.8 || ^6.0 || ^7.0",
     "symfony/var-dumper": "~4.0 || ~5.0",
-    "ext-json": "^1.6",
+    "ext-json": "^1.6 || ^7.4",
     "ext-mbstring": "^7.2"
   },
   "require-dev": {
