--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": ["capsule", "debug", "eloquent", "laravel", "orm"],
   "license": "MIT",
   "require": {
-    "php": "^7.3",
+    "php": ">=7.3",
     "illuminate/database": "^5.8 || ^6.0 || ^7.0",
     "illuminate/events": "^5.8 || ^6.0 || ^7.0",
     "symfony/var-dumper": "~4.0 || ~5.0",
