--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "php": ">=7.4",
     "ext-json": "^1.6 || ^7.4",
     "ext-mbstring": "^7.2",
-    "illuminate/database": "^5.8 || ^6.0 || ^7.0 || ^8.0",
-    "illuminate/events": "^5.8 || ^6.0 || ^7.0 || ^8.0",
+    "illuminate/database": "^7.0 || ^8.0",
+    "illuminate/events": "^7.0 || ^8.0",
     "symfony/var-dumper": "~4.0 || ~5.0"
   },
   "require-dev": {
