--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "php": ">=7.4",
     "ext-json": "^1.6 || ^7.4",
     "ext-mbstring": "^7.2",
-    "illuminate/database": "7.30.4",
-    "illuminate/events": "7.30.4",
+    "illuminate/database": "8.28.*",
+    "illuminate/events": "8.28.*",
     "symfony/var-dumper": "~4.0 || ~5.0"
   },
   "require-dev": {
