--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,7 +2,8 @@ name: "Continuous Integration"
 
 on:
   - workflow_dispatch
-  - pull_request
+  pull_request:
+    branches: [ master ]
 
 jobs:
   tests:
