Reformat CI on: YML.

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,9 +1,10 @@
 name: "Continuous Integration"
 
 on:
-  - workflow_dispatch
+  workflow_dispatch:
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
   tests:
