--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,62 +1,51 @@
 name: "Continuous Integration"
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
 
+env:
+  APP_ENV: test
+
 jobs:
-  tests:
-    name: Tests
-    runs-on: ubuntu-20.04
-    env:
-      PHP_CLI_IMAGE: "ghcr.io/fusionspim/php-capsule-listener/php-cli:latest"
+  build:
+    runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        php-version:
+          - '7.4'
+          - '8.0'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Login to Github Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u fusionsbot --password-stdin
-
-      - name: Restore Docker images
-        uses: satackey/action-docker-layer-caching@v0.0.11
-        continue-on-error: true
+      - uses: shivammathur/setup-php@v2
         with:
-          key: docker-images-${{ hashFiles('docker/**') }}
-          restore-keys: docker-images-
+          php-version: "${{ matrix.php-version }}"
+          coverage: none
+          tools: composer
 
       - name: Restore Composer dependencies
+        id: composer-cache
         uses: actions/cache@v2
         with:
-          path: ./vendor
-          key: php-composer-${{ hashFiles('composer.lock') }}
-          restore-keys: php-composer-
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
 
       - name: Install Composer dependencies
-        run: |
-          docker run -t --rm -v "$PWD":/app -w /app ${{ env.PHP_CLI_IMAGE }} \
-            composer install --prefer-dist --no-interaction
+        if: steps.composer-cache.outputs.cache-hit != 'true'
+        run: composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
-      - name: Restore PHP CS Fixer defects
-        uses: actions/cache@v2
-        with:
-          path: .php_cs.cache
-          key: php-cs-fixer-${{ hashFiles('.php-cs-fixer.dist.php', '.php_cs.cache') }}
-          restore-keys: php-cs-fixer-
+      - name: Run PHP CS fixer
+        run: vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php --dry-run --diff --verbose --stop-on-violation
 
-      - name: Normalise Composer
-        run: |
-          docker run -t --rm -v "$PWD":/app -w /app ${{ env.PHP_CLI_IMAGE }} \
-            composer normalize --dry-run
-
-      - name: Run PHP CS Fixer
-        run: |
-          docker run -t --rm -v "$PWD":/app -w /app ${{ env.PHP_CLI_IMAGE }} \
-            php vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php --dry-run --diff --verbose --stop-on-violation
+      - name: Run Composer normalized
+        run: composer normalize --dry-run
 
       - name: Run unit tests
-        shell: bash
-        run: |
-          docker run -t --rm -v "$PWD":/app -w /app ${{ env.PHP_CLI_IMAGE }} \
-            php vendor/bin/phpunit --stop-on-failure
+        run: composer test
