Support PHP 7.4 or 8.0.

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.4",
-    "ext-json": "^1.6 || ^7.4",
-    "ext-mbstring": "^7.2",
+    "php": "^7.4 || ^8.0",
+    "ext-json": "^7.4 || ^8.0",
+    "ext-mbstring": "^7.4 || ^8.0",
     "illuminate/database": "8.49.*",
     "illuminate/events": "8.49.*",
     "symfony/var-dumper": "~4.0 || ~5.0"
