--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "symfony/var-dumper": "~4.0 || ~5.0"
   },
   "require-dev": {
-    "ext-sqlite3": "^7.2",
+    "ext-sqlite3": "^7.4 || ^8.0",
     "ergebnis/composer-normalize": "^2.6",
     "fusionspim/php-cs-fixer-config": "^8.0",
     "phpunit/phpunit": "^9.0.0"
