--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -34,9 +34,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: vendor
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
-            ${{ runner.os }}-php-
+            ${{ runner.os }}-php-${{ matrix.php-version }}-
 
       - name: Install Composer dependencies
         if: steps.composer-cache.outputs.cache-hit != 'true'
@@ -50,10 +50,3 @@ jobs:
 
       - name: Run unit tests
         run: composer test
-
-      - name: Start SSH debug session
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
-        with:
-          timeout-minutes: 5
-          limit-access-to-actor: true
