--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "php": "^7.4 || ^8.0",
     "ext-json": "^7.4 || ^8.0",
     "ext-mbstring": "^7.4 || ^8.0",
-    "illuminate/database": "8.55.*",
-    "illuminate/events": "8.55.*",
+    "illuminate/database": "^8.0",
+    "illuminate/events": "^8.0",
     "symfony/var-dumper": "~4.0 || ~5.0"
   },
   "require-dev": {
