--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "fix": [
-      "php-cs-fixer fix --config=php-cs-fixer.dist.php; echo",
+      "php-cs-fixer fix --config=.php-cs-fixer.dist.php; echo",
       "composer normalize; echo"
     ],
     "test": [
