--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "ext-sqlite3": "^7.4 || ^8.0",
     "ergebnis/composer-normalize": "^2.6",
     "fusionspim/php-cs-fixer-config": "^9.0",
-    "phpunit/phpunit": "^9.0.0"
+    "phpunit/phpunit": "^9.0.0",
+    "rector/rector": "^0.12.8"
   },
   "autoload": {
     "psr-4": {
@@ -37,8 +38,7 @@
       "php-cs-fixer fix --config=.php-cs-fixer.dist.php; echo",
       "composer normalize; echo"
     ],
-    "test": [
-      "phpunit --stop-on-failure --stop-on-error; echo"
-    ]
+    "test": "phpunit --stop-on-failure --stop-on-error; echo",
+    "fix-rector": "vendor/bin/rector process src"
   }
 }
