--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 /LICENSE             export-ignore
 /phpunit.xml.dist    export-ignore
 /README.md           export-ignore
+/rector.php          export-ignore
