--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /tests                  export-ignore
 /.gitattributes         export-ignore
 /.gitignore             export-ignore
+/.php-capsule-listener  export-ignore
 /php-cs-fixer.dist.php  export-ignore
 /composer.lock          export-ignore
 /LICENSE                export-ignore
