--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
     "orm"
   ],
   "require": {
-    "php": "^7.4 || ^8.0",
-    "ext-json": "^7.4 || ^8.0",
-    "ext-mbstring": "^7.4 || ^8.0",
+    "php": "^8.0",
+    "ext-json": "^8.0",
+    "ext-mbstring": "^8.0",
     "illuminate/database": "^8.0",
     "illuminate/events": "^8.0",
     "symfony/var-dumper": "~4.0 || ~5.0"
   },
   "require-dev": {
-    "ext-sqlite3": "^7.4 || ^8.0",
+    "ext-sqlite3": "^8.0",
     "ergebnis/composer-normalize": "^2.6",
     "fusionspim/php-cs-fixer-config": "^9.0",
     "phpunit/phpunit": "^9.0.0",
