--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
       "php-cs-fixer fix --config=.php-cs-fixer.dist.php; echo",
       "composer normalize; echo"
     ],
-    "test": "phpunit --stop-on-failure --stop-on-error; echo",
-    "fix-rector": "vendor/bin/rector process src tests"
+    "fix-rector": "vendor/bin/rector process src tests",
+    "test": "phpunit --stop-on-failure --stop-on-error; echo"
   }
 }
