Upgrade to PHP 8.0 (#227)
* Install Rector.

* Configure Rector.

* Add ignore.

* Update .gitattributes.

* Update PHP version in Docker image.

* Add another ignore.

* Update packages for PHP 8.

* Update Rector config.

* Apply Rector plus manual changes.

* Update path.

* Remove PHP 7.4 CI build.

* Add rector to ignore.

* Revert "Add rector to ignore."

This reverts commit 51a07e50b7739c97ade30c26b18927301e334a6d.

* Ignore rector.php from CS fixer.

* Normalise JSON.

* Tweak.

--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,19 @@
     "orm"
   ],
   "require": {
-    "php": "^7.4 || ^8.0",
-    "ext-json": "^7.4 || ^8.0",
-    "ext-mbstring": "^7.4 || ^8.0",
+    "php": "^8.0",
+    "ext-json": "^8.0",
+    "ext-mbstring": "^8.0",
     "illuminate/database": "^8.0",
     "illuminate/events": "^8.0",
     "symfony/var-dumper": "~4.0 || ~5.0"
   },
   "require-dev": {
-    "ext-sqlite3": "^7.4 || ^8.0",
+    "ext-sqlite3": "^8.0",
     "ergebnis/composer-normalize": "^2.6",
     "fusionspim/php-cs-fixer-config": "^9.0",
-    "phpunit/phpunit": "^9.0.0"
+    "phpunit/phpunit": "^9.0.0",
+    "rector/rector": "^0.12.8"
   },
   "autoload": {
     "psr-4": {
@@ -37,8 +38,7 @@
       "php-cs-fixer fix --config=.php-cs-fixer.dist.php; echo",
       "composer normalize; echo"
     ],
-    "test": [
-      "phpunit --stop-on-failure --stop-on-error; echo"
-    ]
+    "fix-rector": "vendor/bin/rector process src tests",
+    "test": "phpunit --stop-on-failure --stop-on-error; echo"
   }
 }
