--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,12 @@
-/.semaphore          export-ignore
-/tests               export-ignore
-/.gitattributes      export-ignore
-/.gitignore          export-ignore
-/php-cs-fixer.dist.php        export-ignore
-/composer.lock       export-ignore
-/LICENSE             export-ignore
-/phpunit.xml.dist    export-ignore
-/README.md           export-ignore
+/.github                export-ignore
+/docker                 export-ignore
+/tests                  export-ignore
+/.gitattributes         export-ignore
+/.gitignore             export-ignore
+/.php-capsule-listener  export-ignore
+/php-cs-fixer.dist.php  export-ignore
+/composer.lock          export-ignore
+/LICENSE                export-ignore
+/phpunit.xml.dist       export-ignore
+/README.md              export-ignore
+/rector.php             export-ignore
