--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     "ext-sqlite3": "^8.0",
     "ergebnis/composer-normalize": "^2.6",
     "fusionspim/php-cs-fixer-config": "^10.0",
-    "phpunit/phpunit": "^9.0.0",
-    "rector/rector": "^0.12.8"
+    "phpunit/phpunit": "^9.0.0"
   },
   "autoload": {
     "psr-4": {
