--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,11 @@
       "src/functions.php"
     ]
   },
+  "config": {
+    "allow-plugins": {
+      "ergebnis/composer-normalize": true
+    }
+  },
   "scripts": {
     "fix": [
       "php-cs-fixer fix --config=.php-cs-fixer.dist.php; echo",
